--- a/registrar/sidebar.html
+++ b/registrar/sidebar.html
@@ -42,6 +42,15 @@
             </a>
         </li>
         <li>
+            <a href="programs.php" class="<?= basename($_SERVER['PHP_SELF']) == 'programs.php' ? 'active' : '' ?>">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 
+                             1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+                </svg>
+                Programs
+            </a>
+        </li>
+        <li>
             <a href="../logout.php">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16 13v-2H7V8l-5 4 5 4v-3zM20 3h-8v2h8v14h-8v2h8a2 2 0 0 0 
